--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta http-equiv="pragma" content="no-cache"/>
 
         <!-- Set the title bar of the page -->
-        <title>Created with GameMaker</title>
+        <title>Ball Person</title>
 
         <!-- Custom PreStyle code is injected here -->
         
