--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta http-equiv="pragma" content="no-cache"/>
 
         <!-- Set the title bar of the page -->
-        <title>Ball Person</title>
+        <title>Created with GameMaker</title>
 
         <!-- Custom PreStyle code is injected here -->
         
@@ -102,7 +102,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Ball Person.js?cachebust=1698796254"></script>
+        <script type="text/javascript" src="html5game/Ball Person.js?cachebust=1993670097"></script>
 
         <!-- Builtin injector for injecting runner path -->
         
